--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,8 +34,12 @@
 
 /* product content */
 
-.pos__productcontent{
-    height: 600px;
+.content_main {
+    margin-bottom: 62px;
+}
+
+.pos__productcontent {
+    max-height: 650px;
     overflow-y: auto;
 }
 
@@ -49,7 +53,7 @@
 }
 
 .product__box {
-    width: calc(25% - 12px);
+    width: calc(20% - 14px);
     background: #ffffff;
     text-align: center;
     cursor: pointer;
@@ -128,7 +132,7 @@
 }
 
 .cart__product_title {
-    font-size: 12px;
+    font-size: 14px;
     color: #565656;
 }
 
@@ -161,4 +165,15 @@
 .total_payable strong{
     font-size: 18px;
     color: #f5365c;
+}
+
+.product_cart_price{
+    color: #f5365c;
+    font-weight: 500;
+}
+
+.pos_footer_wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
