--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -111,3 +111,21 @@ img{
 ::-webkit-scrollbar-thumb {
     background: #f5365c;
 }
+
+.btn-close {
+    box-shadow: 0px 5px 20px rgb(0 0 0 / 40%);
+    border-radius: 50%;
+    height: 36px;
+    width: 36px;
+    box-sizing: border-box;
+}
+
+.btn-close:focus {
+    border: 1px solid var(--border-color);
+    box-shadow: 0px 5px 20px rgb(0 0 0 / 10%);
+}
+
+.modal-title {
+    font-size: 22px;
+    color: var(--text-color);
+}
