--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,19 @@
 
 /* 576 */ 
-@media(min-width: 576px){}
+@media(min-width: 576px){
+    .modal-dialog.modal-lg {
+        max-width: 900px;
+    }
+}
 
 /* 768 */
-@media(min-width: 767px){}
+@media(min-width: 767px){
+    .modal-dialog {
+        max-width: 600px;
+        width: 100%;
+        margin: 30px auto;
+    }
+}
 
 /* 1024 */
 @media(min-width: 992px){}
