--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,11 @@
     background: rgb(198 201 209);
 }
 
+.pos_header {
+    padding: 9px 0px;
+    background: rgb(0 31 63);
+}
+
 .branch_location {
     max-width: 320px;
     width: 100%;
@@ -12,16 +17,16 @@
 .branch_location_title {
     font-size: 15px;
     font-weight: 500;
-    color: var(--text-color);
+    color: var(--global-color);
 }
 
 .get_date {
-    color: var(--text-color);
+    color: var(--global-color);
     font-weight: 500;
     font-size: 14px;
 }
 
-.branch_location select{
+.branch_location select {
     height: 30px;
     padding: 0rem 2.25rem 0rem .75rem !important;
 }
@@ -39,40 +44,46 @@
 }
 
 .pos__productcontent {
-    max-height: 650px;
+    max-height: 760px;
     overflow-y: auto;
+}
+
+.card_box_header {
+    background: rgb(198 201 209);
+    padding: 10px;
 }
 
 .pos__product_wrapper {
     display: flex;
     align-items: stretch;
     justify-content: flex-start;
-    gap: 16px;
+    gap: 12px;
     flex-wrap: wrap;
     padding-right: 5px;
 }
 
 .product__box {
-    width: calc(20% - 14px);
+    width: calc(17% - 15px);
     background: #ffffff;
     text-align: center;
     cursor: pointer;
     font-weight: 600;
     border-radius: 4px;
     box-shadow: 0px 5px 30px rgb(0 0 0 / 10%);
-    padding-top: 5px;
     border: 1px solid rgb(246 105 144 / 10%);
+    padding: 5px 3px;
 }
 
 .product_thumb {
     max-width: 120px;
     width: 100%;
     height: 70px;
-    margin: 0px auto;   
+    margin: 0px auto;
 }
 
-.product_thumb img{
+.product_thumb img {
     height: 100%;
+    mix-blend-mode: darken;
 }
 
 .product_title {
@@ -90,7 +101,7 @@
 }
 
 .form-select:focus,
-.form-control:focus{
+.form-control:focus {
     box-shadow: none;
 }
 
@@ -99,35 +110,37 @@
 }
 
 .form-control,
-.form-select{
+.form-select {
     font-size: 14px;
 }
 
-.product__table{
-    min-height: 57vh;
+.product__table {
+    min-height: 52vh;
     max-height: 57vh;
     overflow-y: auto;
     margin-bottom: 20px;
 }
 
 .product__table table thead tr th,
-.product__table table tbody tr td{
+.product__table table tbody tr td {
     border: 1px solid #f4f4f4;
     vertical-align: middle;
 }
 
-.product__table table thead tr th{
+.product__table table thead tr th {
     font-size: 14px;
-    color: var(--text-color);
+    color: #ffffff;
+    background: #001f3f;
+    border-color: #001f3f;
 }
 
-.cart_actionBtn{
+.cart_actionBtn {
     padding: 4px 9px;
     border-radius: 5px;
     font-size: 12px;
 }
 
-.cart_actionBtn i{
+.cart_actionBtn i {
     font-weight: 400;
 }
 
@@ -156,23 +169,23 @@
     left: 0px;
 }
 
-.footer_innerbtn{
+.footer_innerbtn {
     font-size: 14px;
     padding: 5px 15px;
     border-radius: 4px;
 }
 
-.total_payable strong{
+.total_payable strong {
     font-size: 18px;
     color: #f5365c;
 }
 
-.product_cart_price{
+.product_cart_price {
     color: #f5365c;
     font-weight: 500;
 }
 
-.pos_footer_wrapper{
+.pos_footer_wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -181,14 +194,14 @@
 .cardpayment_row,
 .cheque_payment_row,
 .bank_payment_row,
-.cutomer_payment_row{
+.cutomer_payment_row {
     display: none;
 }
 
 .cardpayment_row.show,
 .cheque_payment_row.show,
 .bank_payment_row.show,
-.cutomer_payment_row.show{
+.cutomer_payment_row.show {
     display: block;
 }
 
@@ -196,7 +209,7 @@
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, .10);
-    text-align: center;
+    border-top: 2px solid #f5365c;
 }
 
 .suspend_note_title {
@@ -214,20 +227,20 @@
 
 .suspend_total_item,
 .suspend_total_amount,
-.suspend_userid{
+.suspend_userid {
     font-size: 14px;
     margin-bottom: 2px;
     font-weight: 400;
     color: var(--text-color);
 }
 
-.suspend_note_footer{
+.suspend_note_footer {
     margin-top: 10px;
     padding-top: 5px;
     border-top: 1px solid rgb(203, 203, 203);
 }
 
-.register_modaltable tr:first-child{
+.register_modaltable tr:first-child {
     background: #001f3f;
 }
 
@@ -241,23 +254,23 @@
     padding: 5px 10px;
 }
 
-.tableregsiter_sale tr:nth-child(2){
+.tableregsiter_sale tr:nth-child(2) {
     background: #001f3f;
 }
 
-.tableregsiter_sale tr:nth-child(2) :where(td, th){
+.tableregsiter_sale tr:nth-child(2) :where(td, th) {
     color: var(--global-color);
 }
 
-.tableregsiter_sale tr:last-child{
+.tableregsiter_sale tr:last-child {
     background: #f5365c;
 }
 
-.tableregsiter_sale tr:last-child :where(td, th){
+.tableregsiter_sale tr:last-child :where(td, th) {
     color: var(--global-color);
 }
 
-.register_soldtable_title{
+.register_soldtable_title {
     font-size: 18px;
     margin-bottom: 15px;
 }
@@ -270,11 +283,11 @@
     font-size: 14px;
 }
 
-.register_ruleauth ul li:not(:last-child){
+.register_ruleauth ul li:not(:last-child) {
     margin-bottom: 5px;
 }
 
-.register_ruleauth_title{
+.register_ruleauth_title {
     font-weight: 500;
     margin-right: 6px;
 }
@@ -313,7 +326,7 @@
     border: 2px solid var(--border-color);
 }
 
-.check_inner input:checked ~ .checkmark {
+.check_inner input:checked~.checkmark {
     background-color: #f5365c;
     border: none;
 }
@@ -334,6 +347,258 @@
     border-width: 0 2px 2px 0;
 }
 
-.check_inner input:checked ~ .checkmark:after {
+.check_inner input:checked~.checkmark:after {
     display: block;
+}
+
+.product__table table {
+    border-collapse: separate;
+    border-spacing: 0 15px;
+}
+
+/* calculator */
+.calculator {
+    background-color: rgb(255 255 255);
+    padding: 10px;
+    border: 3px solid rgb(231 231 231);
+    border-top: 3px solid #f4365c;
+    width: 180px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 9;
+    right: 0px;
+    top: calc(100% + 10px);
+    transition: var(--transition);
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+    box-shadow: 0px 5px 30px rgb(0 0 0 / 50%);
+}
+
+.showCal.calculator{
+    pointer-events: visible;
+    visibility: visible;
+    opacity: 1;
+}
+
+/* Calculator : Display */
+.display {
+    text-align: right;
+    padding: 0 8px 0 8px;
+    background-color: #c6c9d1;
+    box-shadow: inset 0px 5px 10px rgb(0 0 0 / 10%);
+    box-sizing: border-box;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    word-wrap: break-word;
+    border-radius: 4px;
+    border: 1px solid rgb(0 31 63 / 15%);
+}
+
+#current-calc,
+#result {
+    unicode-bidi: bidi-override;
+    direction: ltr;
+    transition: color 1.8s;
+    display: inline-block;
+}
+
+#current-calc {
+    font-size: 14px;
+    color: var(--disp-calc-font);
+    padding-right: 2px;
+}
+
+#result {
+    font-size: 20px;
+    line-height: 32px;
+}
+
+
+/* Carlculator : Display > Scrollbar */
+.display::-webkit-scrollbar {
+    height: 6px;
+}
+
+.display::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.display::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: var(--disp-scroll-primary);
+}
+
+/* Calculator : Keys */
+
+.cal_row {
+    display: flex;
+    gap: 6px;
+}
+
+.cal_row span {
+    width: 35px;
+    height: 32px;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 14px;
+    display: grid;
+    place-content: center;
+    background: rgb(0 31 63 / 10%);
+    border-radius: 0.2em;
+    box-shadow: 0 3px 0 0px rgb(108 127 145);
+    transition: 0.8s, font-size 0s;
+    cursor: pointer;
+}
+
+.cal_row span:hover {
+    filter: brightness(0.9);
+}
+
+#num:active,
+#num.active {
+    transition: 0.08s;
+    box-shadow: 0 2px 0 1px #001f3f inset;
+}
+
+#operator {
+    background-color: #f4365c;
+    color: var(--global-color);
+    box-shadow: 0 4px 0 1px #f5365c33;
+}
+
+#operator:active,
+#operator.active {
+    transition: 0.08s;
+    box-shadow: 0 2px 0 1px #cbc9c9 inset;
+    font-size: 18px;
+}
+
+#del {
+    background-color: #f4365c;
+    box-shadow: 0 4px 0 1px #f5365c33;
+    color: var(--global-color);
+}
+
+#del:active,
+#del.active {
+    transition: 0.08s;
+    box-shadow: 0 2px 0 1px #c3cad1 inset;
+    font-size: 18px;
+}
+#equ {
+    background-color: #2dce89;
+    box-shadow: 0 3px 0 0px #2dce893d;
+    color: var(--global-color);
+}
+
+#equ:active,
+#equ.active {
+    transition: 0.08s;
+    box-shadow: 0 2px 0 1px rgb(31 153 114) inset;
+    font-size: 18px;
+}
+#other {
+    background-color: #001f3f;
+    color: var(--global-color);
+}
+
+#other:active,
+#other.active {
+    transition: 0.08s;
+    box-shadow: 0 2px 0 1px #f4365c inset;
+    font-size: 18px;
+}
+
+
+.histo-calcul span:nth-child(odd) {
+    display: block;
+    margin-bottom: 5px;
+    color: var(--histo-font-odd);
+    transition: color 1.8s;
+    font-size: 12px;
+}
+
+.histo-calcul span:nth-child(even) {
+    display: block;
+    margin-bottom: 16px;
+    color: var(--histo-font-even);
+    transition: color 1.8s;
+    font-size: 16px;
+}
+
+
+
+/* Histo Calcul : Scrollbar*/
+.histo-calcul::-webkit-scrollbar {
+    width: 5px;
+}
+
+.histo-calcul::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: var(--histo-scroll-secondary);
+}
+
+.histo-calcul::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: var(--histo-scroll-primary);
+}
+
+/*Bottom button*/
+.toolsbar {
+    height: 45px;
+    margin-top: 7px;
+    text-align: center;
+}
+
+#theme-switch,
+#link {
+    margin: 0 4px 0 4px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 2em;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    background-color: var(--calculator);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 0 1px var(--key-shadow);
+    transition: 0.8s, font-size 0s, content 10s;
+}
+
+#theme-switch:active,
+#link:active {
+    transition: 0.08s;
+    box-shadow: 0 1px 0 1px var(--key-shadow) inset;
+    font-size: 16px;
+}
+
+#theme-switch:hover,
+#link:hover {
+    filter: brightness(0.9);
+}
+
+/* calculator end */
+
+.paybox_body {
+    padding: 20px 15px;
+    background: #001f3f;
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.paybox_body strong{
+    font-size: 15px;
+}
+
+.paybox_body span{
+    font-size: 14px;
+}
+
+.paybox_body hr{
+    margin-bottom: 10px;
 }
